Fixed imiages not showing bug, online page unable to pull pics from local source

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,22 +77,25 @@ h3 {
 }
 
 .rock {
-    background: url(/images/rock_image2.png) no-repeat center center;
+    background: url(https://github.com/SteCodez/R-P-S/blob/master/images/rock_image2.png?raw=true) no-repeat center center;
     cursor: pointer;
     width: 70px;
     height: 70px;
 }
 
 .paper {
-    background: url(/images/paper_image2.png) center;
+    background: url(https://github.com/SteCodez/R-P-S/blob/master/images/paper_image2.png?raw=true) center;
     width: 70px;
     height: 70px;
+    background-size: auto;
+    background-repeat: no-repeat;
 }
 
 .scissor {
-    background: url(./images/scissors_image2.png) no-repeat center center;
+    background: url(https://github.com/SteCodez/R-P-S/blob/master/images/scissors_image2.png?raw=true) no-repeat center center;
     width: 70px;
     height: 70px;
+
 }
 
 .move {
